# workdeck

./: Cargo.toml  LICENSE  README.md
.agents/workdeck/: config.toml  cycles.toml  events.jsonl  labels.toml  projects.toml
.agents/workdeck/agents/: codex-cli-buildout.toml  codex-ux-polish.toml
.agents/workdeck/issues/: WD-1.toml  WD-2.toml  WD-3.toml  WD-4.toml  WD-5.toml
.github/workflows/: ci.yml  release.yml
Formula/: workdeck.rb
crates/workdeck-cli/: Cargo.toml  README.md
crates/workdeck-cli/src/: app.rs  config.rs  lib.rs  main.rs  payload.rs
crates/workdeck-cli/src/git/: mod.rs
crates/workdeck-cli/src/search/: mod.rs
crates/workdeck-cli/src/store/: mod.rs
crates/workdeck-cli/src/syntax/: mod.rs
crates/workdeck-cli/src/tui/: mod.rs
crates/workdeck-cli/src/views/: mod.rs
crates/workdeck-cli/src/web/: mod.rs
crates/workdeck-cli/src/web/assets/: app.css  app.js  index.html
crates/workdeck-cli/tests/: cli.rs  git_integration.rs
docs/: files-ux-and-cli-plan.md  ux-audit.md  workdeck-plan.md
scripts/: soak.sh
